<resources>
    <string name="app_name">West High</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news_feed">News Feed</string>
    <string name="staff_directory">Staff Directory</string>
    <string name="bell_schedule">Bell Schedule</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="lunch_menu">Lunch Menu</string>
    <string name="communicate">Communicate</string>
    <string name="twitter">Twitter</string>
    <string name="call">Call</string>
    <string name="title_card">Title Card</string>
</resources>
