<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news_feed"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/news_feed" />
        <item
            android:id="@+id/nav_staff_directory"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/staff_directory" />
        <item
            android:id="@+id/nav_bell_schedule"
            android:icon="@android:drawable/ic_lock_idle_alarm"
            android:title="@string/bell_schedule" />
        <item
            android:id="@+id/nav_academic_calendar"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/academic_calendar" />

        <item
            android:id="@+id/nav_lunch_menu"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/lunch_menu" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_communicate_twitter"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/twitter" />

            <item
                android:id="@+id/nav_communicate_call"
                android:icon="@android:drawable/stat_sys_phone_call"
                android:title="@string/call" />
        </menu>
    </item>

</menu>
